--- a/.ado/templates/upload-build-logs.yml
+++ b/.ado/templates/upload-build-logs.yml
@@ -13,7 +13,8 @@ steps:
     displayName: dir CrashDumps
     inputs:
       script: dir $(Build.StagingDirectory)\CrashDumps /s
-    condition:  succeededOrFailed()
+    condition:  failed()
+    failOnStderr: false
 
   - task: PublishBuildArtifacts@1
     displayName: Upload crash dumps
