--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -123,9 +123,15 @@ steps:
       workingDirectory: $(Build.SourcesDirectory)
 
   - task: CmdLine@2
-    displayName: Set LocalDumps for cl.exe
+    displayName: Set LocalDumps for link.exe
     inputs:
       script: $(Build.SourcesDirectory)\.ado\SetupLocalDumps.cmd link
+      workingDirectory: $(Build.SourcesDirectory)
+
+  - task: CmdLine@2
+    displayName: Set LocalDumps for msbuild.exe
+    inputs:
+      script: $(Build.SourcesDirectory)\.ado\SetupLocalDumps.cmd msbuild
       workingDirectory: $(Build.SourcesDirectory)
 
   # Work around issue of parameters not getting expanded in conditions properly
