[CI] upload crash dump artifacts (#5799)
* upload crash dump artifacts

* dir crashdumps

* only upload crashdumps when failed

* failed()

* yaml is bad

* run setuplocaldumps closer to the tasks

* .

* collect MSBuild crash logs too

* huh

* msbuild crash maybe?

* .

* move reg file to e2etest

Co-authored-by: Alexander Sklar <asklar@winse.microsoft.com>

--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -32,6 +32,12 @@ jobs:
           script: $(Build.SourcesDirectory)\.ado\SetupLocalDumps.cmd ReactUWPTestApp
           workingDirectory: $(Build.SourcesDirectory)
 
+      - task: CmdLine@2
+        displayName: Set up AppVerifer on ReactUWPTestApp
+        inputs:
+          script: regedit /S $(Build.SourcesDirectory)\.ado\ReactUWPTestApp.reg
+          workingDirectory: $(Build.SourcesDirectory)
+
       - task: NuGetCommand@2
         displayName: NuGet restore - ReactUWPTestApp
         inputs:
@@ -45,10 +51,6 @@ jobs:
         inputs:
           script: yarn windows --no-launch --no-packager --arch ${{ parameters.BuildPlatform }} --release --logging --buildLogDirectory $(BuildLogDirectory) --msbuildprops BaseIntDir=$(BaseIntDir)
           workingDirectory: packages/E2ETest
-
-      - template: upload-build-logs.yml
-        parameters:
-          buildLogDirectory: '$(BuildLogDirectory)'
 
       - task: CopyFiles@2
         displayName: Copy ReactUWPTestApp artifacts
@@ -134,3 +136,8 @@ jobs:
           script: |
             Get-WmiObject Win32_LogicalDisk
         condition: succeededOrFailed()
+
+      - template: upload-build-logs.yml
+        parameters:
+          buildLogDirectory: '$(BuildLogDirectory)'
+          condition: succeededOrFailed()
