only require VC outside the lab

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -67,7 +67,7 @@ jobs:
         inputs:
           targetType: filePath
           filePath: $(Build.SourcesDirectory)\vnext\Scripts\rnw-dependencies.ps1
-          arguments: -NoPrompt
+          arguments: -NoPrompt -Tags buildLab
 
       - template: templates/build-rnw.yml
         parameters:
