Limit amount of memory used by msbuild in CI

--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -79,3 +79,5 @@ steps:
 
   - powershell: |
         Write-Host "##vso[task.setvariable variable=MSBUILDDEBUGPATH]$(Build.StagingDirectory)\CrashDumps"
+        Write-Host "##vso[task.setvariable variable=EnforceProcessCountAcrossBuilds]true"
+        Write-Host "##vso[task.setvariable variable=UseMultiToolTask]true"
