Force E2ETest to show colors

--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -10,11 +10,10 @@
     "lint:fix": "just-scripts lint:fix",
     "watch": "just-scripts watch",
     "windows": "react-native run-windows",
-    "prettier": "prettier --write --loglevel warn \"**/**/*.ts\"",
     "e2e": "react-native run-windows --no-launch --logging && npm run e2etest",
     "e2ebundle": "npm run bundle && react-native run-windows --no-launch --no-packager --bundle --logging && npm run e2etest",
-    "e2etest": "rimraf reports/* && npm run prettier && node run_wdio.js",
-    "testspec": "npm run prettier && wdio --spec",
+    "e2etest": "rimraf reports/* && set FORCE_COLOR=2 & node run_wdio.js",
+    "testspec": "wdio --spec",
     "bundle": "just-scripts prepareBundle && react-native bundle --platform windows --entry-file dist/app/index.js --bundle-output windows/ReactUWPTestApp/Bundle/index.windows.bundle --assets-dest windows/ReactUWPTestApp/Bundle",
     "buildapp": "react-native run-windows --no-launch --no-packager --no-deploy",
     "deployapp": "react-native run-windows --no-launch --no-packager --no-build",
