--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -140,6 +140,7 @@ steps:
       Write-Host "##vso[task.setvariable variable=MSBUILDDEBUGPATH]$(Build.StagingDirectory)\CrashDumps"
       Write-Host "##vso[task.setvariable variable=EnforceProcessCountAcrossBuilds]true"
       Write-Host "##vso[task.setvariable variable=UseMultiToolTask]true"
+      Write-Host "##vso[task.setvariable variable=MultiProcMaxCount]6"
 
   - task: CmdLine@2
     displayName: Build project (Release)
