--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -152,7 +152,7 @@ jobs:
           BuildConfiguration: Debug
           BuildPlatform: x86
     pool:
-      vmImage: $(VmImage)
+      name: 'winuibuildagents'
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
