--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -39,7 +39,7 @@ jobs:
           versionSpec: '12.18.3' 
           checkLatest: false # Optional
 
-      - task: geeklearningio.gl-vsts-tasks-yarn-dev.yarn-installer-task.YarnInstaller@3
+      - task: YarnInstaller@3
         displayName: 'Use Yarn 1.19.1'
         inputs:
           versionSpec: 1.19.1
