--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -39,12 +39,7 @@ jobs:
           versionSpec: '12.18.3' 
           checkLatest: false # Optional
 
-      - task: YarnInstaller@3
-        displayName: 'Use Yarn 1.19.1'
-        inputs:
-          versionSpec: 1.19.1
-          checkLatest: false
-          includePrerelease: false
+      - template: templates/yarn-install.yml
 
       - template: templates/react-native-init.yml
         parameters:
