--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -39,7 +39,7 @@ jobs:
           versionSpec: '12.18.3' 
           checkLatest: false # Optional
 
-      - template: templates/yarn-install.yml
+      - template: templates/prepare-env.yml
 
       - template: templates/react-native-init.yml
         parameters:
