--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -64,15 +64,22 @@ jobs:
         X64Debug:
           BuildConfiguration: Debug
           BuildPlatform: x64
-        X86Debug:
-          BuildConfiguration: Debug
-          BuildPlatform: x86
         X64Release:
           BuildConfiguration: Release
           BuildPlatform: x64
+        X86Debug:
+          BuildConfiguration: Debug
+          BuildPlatform: x86
         X86Release:
           BuildConfiguration: Release
           BuildPlatform: x86
+        ARM64Debug:
+          BuildConfiguration: Debug
+          BuildPlatform: ARM64
+        ARM64Release:
+          BuildConfiguration: Release
+          BuildPlatform: ARM64
+
     pool:
       vmImage: $(VmImage)
 
