Promote 0.62 to legacy

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -62,7 +62,7 @@
     "react-native": "^0.62.0-0"
   },
   "beachball": {
-    "defaultNpmTag": "latest",
+    "defaultNpmTag": "v0.62-stable",
     "gitTags": true,
     "disallowedChangeTypes": [
       "major",
