--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -67,11 +67,11 @@
     "react-native": "^0.63.0-0"
   },
   "beachball": {
-    "defaultNpmTag": "preview",
+    "defaultNpmTag": "latest",
     "disallowedChangeTypes": [
       "major",
       "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "promoteRelease": true
