--- a/vnext/package.json
+++ b/vnext/package.json
@@ -105,6 +105,7 @@
     "/Scripts",
     "/Shared",
     "/stubs",
+    "/template",
     "/.flowconfig",
     "/Directory.Build.props",
     "/Directory.Build.targets",
