--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -4,11 +4,31 @@
   "private": true,
   "scripts": {
     "windows": "react-native run-windows",
-    "start": "react-native start"
+    "start": "react-native start",
+    "lint": "just-scripts lint",
+    "lint:fix": "just-scripts lint:fix",
+    "integrationtest": "just-scripts test"
   },
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.0.0-e75557b48",
-    "react-native-windows": "0.0.0-canary.155"
+    "react-native-windows": "^0.0.0-canary.156"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@rnw-scripts/eslint-config": "0.1.0",
+    "@rnw-scripts/just-task": "0.0.2",
+    "@rnw-scripts/ts-config": "0.1.0",
+    "@types/jest": "^24.9.1",
+    "@types/ws": "^7.2.6",
+    "babel-jest": "^24.9.0",
+    "eslint": "6.8.0",
+    "jest": "^24.9.0",
+    "just-scripts": "^0.36.1",
+    "ps-list": "^7.2.0",
+    "typescript": "^3.8.3",
+    "ws": "^7.3.1"
   }
 }
