--- a/packages/@rnw-scripts/jest-unittest-config/package.json
+++ b/packages/@rnw-scripts/jest-unittest-config/package.json
@@ -10,12 +10,12 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
-    "eslint": "6.8.0"
+    "babel-jest": "^26.3.0",
+    "eslint": "6.8.0",
+    "jest": "^26.4.0"
   },
   "peerDependencies": {
-    "babel-jest": "^24.0.0",
-    "jest": "^24.0.0"
+    "babel-jest": "^26.3.0",
+    "jest": "^26.4.0"
   }
 }
